Twenty Nineteen: Fix pullquote styling in editor when block has alignment.
Props devnel, sabernhardt.
Fixes #53112.


Built from https://develop.svn.wordpress.org/trunk@51096


git-svn-id: http://core.svn.wordpress.org/trunk@50705 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentynineteen/style-editor.scss
+++ b/wp-content/themes/twentynineteen/style-editor.scss
@@ -478,6 +478,7 @@ figcaption,
 	}
 }
 
+.wp-block-pullquote[data-type="core/pullquote"],
 .wp-block[data-type="core/pullquote"],
 .wp-block[data-type="core/pullquote"][data-align="left"],
 .wp-block[data-type="core/pullquote"][data-align="right"] {
@@ -505,6 +506,20 @@ figcaption,
 
 	em {
 		font-style: normal;
+	}
+}
+
+.wp-block[data-align="left"] > .wp-block-pullquote,
+.wp-block[data-align="right"] > .wp-block-pullquote {
+	max-width: 50%;
+	text-align: inherit;
+
+	&:not(.is-style-solid-color) {
+		padding: 0;
+	}
+
+	&.is-style-solid-color {
+		padding: 1em;
 	}
 }
 
